tests/snapshots/comments__it_can_parse_document_with_just_comments.snap
---
source: tests/comments.rs
expression: ast
---
{
  "treeType": "documentFragment",
  "children": [
    "x",
    "y",
    "z"
  ]
}
